Removing prefix free to replace with autoprefixer, added colors, fixed some spacing

--- a/sass/dependencies/variables/_paths.scss
+++ b/sass/dependencies/variables/_paths.scss
@@ -3,6 +3,5 @@
 // ------------------------------------------------------------------
 
 $root-assets: "/" !default;
-$font-path: $root-assets+"/fonts" !default;
-$image-path: $root-assets+"/img" !default;
-
+$font-path: $root-assets+"fonts" !default;
+$image-path: $root-assets+"img" !default;
